BUG: IE7/8 type column not wide enough in SDP Refresh more views; view count should be right-aligned.
QA: SDP Refresh downloads and more views should be working in IE7/8 now.

To-be-

--- a/app/styles/tables.sass
+++ b/app/styles/tables.sass
@@ -50,8 +50,11 @@
 .gridList.filterList
   thead
     th.type
-      width: 4em
+      width: 5em
     th.viewed
       width: 6em
     th.picture
       width: 3em
+  tbody
+    td.viewed
+      text-align: right
